--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TinDog</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link href="/css/style.css" rel="stylesheet">
+<link href="style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <div class="container col-xxl-8 px-4 pt-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="/images/iphone.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="600" loading="lazy">
+          <img src="iphone.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="600" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Meet new and interesting dogs nearby.</h1>
@@ -95,7 +95,7 @@
   <div class="p-5 text-center bg-body-tertiary">
     <div class="container py-5">
       <h1 class="text-body-emphasis" style="margin-bottom: 80px;">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h1>
-      <img style="border-radius: 50%;" src="/images/dog-img.jpg" height="100px">
+      <img style="border-radius: 50%;" src="dog-img.jpg" height="100px">
 
       <p class="col-lg-8 mx-auto lead" style="margin-top: 20px;">Pebbles, New York
 </p>
